// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root appRoutes renders Contacts and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="contacts"
    >
      <div
        class="header-container contacts-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="page-title"
      >
        Contacts
      </div>
      <div
        class="no-data"
      >
        No Contacts
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Home and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="home"
    >
      <div
        class="header-container home-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
        <div
          class="header-nav"
        >
          <a
            href="/scan"
          >
            <i
              class="icon-qrcode"
            />
            Scan QR code
          </a>
          <a
            class="link send"
            href="/send"
          >
            <i
              class="icon-send"
            />
            Send Bitcoin
          </a>
          <a
            class="link receive"
            href="/receive"
          >
            <i
              class="icon-receive"
            />
            Receive Bitcoin
          </a>
        </div>
      </div>
      <div
        class="recent-transactions"
      />
    </div>
    <div
      id="powered-by"
    >
      <div
        class="content"
      >
        Powered By 
        <a
          href="https://galoy.io/"
          rel="noreferrer"
          target="_blank"
        >
          Galoy
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Receive and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="receive"
    >
      <div
        class="header-container receive-bitcoin-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="page-title"
      >
        Receive Bitcoin
      </div>
      <div
        class="tabs"
      >
        <div
          class="tab active"
        >
          Lightning
        </div>
        <div
          class="tab link"
        >
          OnChain
        </div>
      </div>
      <div
        class="tab-content"
      >
        <div
          class="amount-input center-display"
        >
          <div
            class="input-label"
          >
            Set Amount
          </div>
          <div
            class="amount-input-form"
          >
            <div
              class="currency-label"
            >
              $
            </div>
            <input
              inputmode="numeric"
              pattern="\\\\d*"
              placeholder="Set invoice value in USD"
              type="text"
              value=""
            />
            <div
              class="toggle-currency link"
            >
              ⇅
            </div>
          </div>
        </div>
        <div
          class="note-input center-display"
        >
          <div
            class="input-label"
          >
            Note or Label
          </div>
          <textarea
            name="memo"
            placeholder="Set a note for the sender here (optional)"
            rows="3"
          />
        </div>
        <div
          class="action-button center-display"
        >
          <button>
            Next 
          </button>
        </div>
        <div
          class="action-button center-display"
        >
          <a
            href="/"
          >
            Cancel
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Send and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="send"
    >
      <div
        class="header-container send-bitcoin-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="page-title"
      >
        Send Bitcoin
      </div>
      <div
        class="destination-input center-display"
      >
        <div
          class="input-label"
        >
          To Recipient
        </div>
        <div
          class="destination"
        >
          <input
            autocomplete="off"
            name="destination"
            placeholder="username, invoice, or address"
            type="text"
            value=""
          />
          <div
            class="qrcode-detector"
          >
            <div
              class="scan-start link"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.1667 9.24666C20.7058 9.24666 20.3333 8.87333 20.3333 8.41333V4.46333C20.3333 4.02417 19.9758 3.66667 19.5375 3.66667H15.5875C15.1267 3.66667 14.7542 3.29333 14.7542 2.83333C14.7542 2.37333 15.1267 2 15.5875 2H19.5375C20.8958 2 22 3.105 22 4.46333V8.41333C22 8.87333 21.6275 9.24666 21.1667 9.24666Z"
                  fill="currentColor"
                />
                <path
                  d="M2.83333 9.24667C2.3725 9.24667 2 8.87333 2 8.41333V4.46333C2 3.105 3.10417 2 4.4625 2H8.4125C8.87333 2 9.24583 2.37333 9.24583 2.83333C9.24583 3.29333 8.87333 3.66667 8.4125 3.66667H4.4625C4.02417 3.66667 3.66667 4.02417 3.66667 4.46333V8.41333C3.66667 8.87333 3.29417 9.24667 2.83333 9.24667Z"
                  fill="currentColor"
                />
                <path
                  d="M19.5375 22H15.5875C15.1267 22 14.7542 21.6267 14.7542 21.1667C14.7542 20.7067 15.1267 20.3333 15.5875 20.3333H19.5375C19.9758 20.3333 20.3333 19.9758 20.3333 19.5367V15.5867C20.3333 15.1267 20.7058 14.7533 21.1667 14.7533C21.6275 14.7533 22 15.1267 22 15.5867V19.5367C22 20.895 20.8958 22 19.5375 22Z"
                  fill="currentColor"
                />
                <path
                  d="M8.4125 22H4.4625C3.10417 22 2 20.895 2 19.5367V15.5867C2 15.1267 2.3725 14.7533 2.83333 14.7533C3.29417 14.7533 3.66667 15.1267 3.66667 15.5867V19.5367C3.66667 19.9758 4.02417 20.3333 4.4625 20.3333H8.4125C8.87333 20.3333 9.24583 20.7067 9.24583 21.1667C9.24583 21.6267 8.87333 22 8.4125 22Z"
                  fill="currentColor"
                />
                <path
                  d="M9.89833 11.2992H5.75C5.28917 11.2992 4.91667 10.9258 4.91667 10.4658V5.75C4.91667 5.29 5.28917 4.91667 5.75 4.91667H9.89833C10.3592 4.91667 10.7317 5.29 10.7317 5.75V10.4658C10.7317 10.9258 10.3583 11.2992 9.89833 11.2992ZM6.58333 9.6325H9.065V6.58333H6.58333V9.6325Z"
                  fill="currentColor"
                />
                <path
                  d="M18.25 19.0833H14.2917C13.8308 19.0833 13.4583 18.71 13.4583 18.25V15.5983C13.4583 15.1383 13.8308 14.765 14.2917 14.765C14.7525 14.765 15.125 15.1383 15.125 15.5983V17.4167H17.4167V14.9167H16.4317C15.9708 14.9167 15.5983 14.5433 15.5983 14.0833C15.5983 13.6233 15.9708 13.25 16.4317 13.25H18.25C18.7108 13.25 19.0833 13.6233 19.0833 14.0833V18.25C19.0833 18.71 18.7108 19.0833 18.25 19.0833Z"
                  fill="currentColor"
                />
                <path
                  d="M18.25 9.9925H14.8408C14.38 9.9925 14.0075 9.61916 14.0075 9.15916V5.75C14.0075 5.29 14.38 4.91667 14.8408 4.91667H18.25C18.7108 4.91667 19.0833 5.29 19.0833 5.75V9.15916C19.0833 9.61916 18.7108 9.9925 18.25 9.9925ZM15.6742 8.32583H17.4167V6.58333H15.6742V8.32583Z"
                  fill="currentColor"
                />
                <path
                  d="M12.3983 13.78H5.75C5.28917 13.78 4.91667 13.4067 4.91667 12.9467C4.91667 12.4867 5.28917 12.1133 5.75 12.1133H11.565V6.5075C11.565 6.0475 11.9375 5.67417 12.3983 5.67417C12.8592 5.67417 13.2317 6.0475 13.2317 6.5075V12.9467C13.2317 13.4067 12.8583 13.78 12.3983 13.78Z"
                  fill="currentColor"
                />
                <path
                  d="M14.7083 13.5717C14.2475 13.5717 13.875 13.1983 13.875 12.7383V11.6025C13.875 11.1425 14.2475 10.7692 14.7083 10.7692H18.4583C18.9192 10.7692 19.2917 11.1425 19.2917 11.6025C19.2917 12.0625 18.9192 12.4358 18.4583 12.4358H15.5417V12.7383C15.5417 13.1983 15.1692 13.5717 14.7083 13.5717Z"
                  fill="currentColor"
                />
                <path
                  d="M12.0183 18.0008C11.5575 18.0008 11.185 17.6275 11.185 17.1675V15.2742C11.185 14.8142 11.5575 14.4408 12.0183 14.4408C12.4792 14.4408 12.8517 14.8142 12.8517 15.2742V17.1675C12.8517 17.6275 12.4792 18.0008 12.0183 18.0008Z"
                  fill="currentColor"
                />
                <path
                  d="M9.70833 19.0833H5.75C5.28917 19.0833 4.91667 18.71 4.91667 18.25V15.22C4.91667 14.76 5.28917 14.3867 5.75 14.3867H9.70833C10.1692 14.3867 10.5417 14.76 10.5417 15.22V18.25C10.5417 18.71 10.1692 19.0833 9.70833 19.0833ZM6.58333 17.4167H8.875V16.0533H6.58333V17.4167Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="action-button center-display"
      >
        <button
          disabled=""
        >
          Next 
        </button>
      </div>
      <div
        class="action-button center-display"
      >
        <a
          href="/"
        >
          Cancel
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Send with a destination and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="send"
    >
      <div
        class="header-container send-bitcoin-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="page-title"
      >
        Send Bitcoin
      </div>
      <div
        class="destination-input center-display"
      >
        <div
          class="input-label"
        >
          To Recipient
        </div>
        <div
          class="destination"
        >
          <input
            autocomplete="off"
            name="destination"
            placeholder="username, invoice, or address"
            type="text"
            value="user0"
          />
          <div
            class="qrcode-detector"
          >
            <div
              class="scan-start link"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.1667 9.24666C20.7058 9.24666 20.3333 8.87333 20.3333 8.41333V4.46333C20.3333 4.02417 19.9758 3.66667 19.5375 3.66667H15.5875C15.1267 3.66667 14.7542 3.29333 14.7542 2.83333C14.7542 2.37333 15.1267 2 15.5875 2H19.5375C20.8958 2 22 3.105 22 4.46333V8.41333C22 8.87333 21.6275 9.24666 21.1667 9.24666Z"
                  fill="currentColor"
                />
                <path
                  d="M2.83333 9.24667C2.3725 9.24667 2 8.87333 2 8.41333V4.46333C2 3.105 3.10417 2 4.4625 2H8.4125C8.87333 2 9.24583 2.37333 9.24583 2.83333C9.24583 3.29333 8.87333 3.66667 8.4125 3.66667H4.4625C4.02417 3.66667 3.66667 4.02417 3.66667 4.46333V8.41333C3.66667 8.87333 3.29417 9.24667 2.83333 9.24667Z"
                  fill="currentColor"
                />
                <path
                  d="M19.5375 22H15.5875C15.1267 22 14.7542 21.6267 14.7542 21.1667C14.7542 20.7067 15.1267 20.3333 15.5875 20.3333H19.5375C19.9758 20.3333 20.3333 19.9758 20.3333 19.5367V15.5867C20.3333 15.1267 20.7058 14.7533 21.1667 14.7533C21.6275 14.7533 22 15.1267 22 15.5867V19.5367C22 20.895 20.8958 22 19.5375 22Z"
                  fill="currentColor"
                />
                <path
                  d="M8.4125 22H4.4625C3.10417 22 2 20.895 2 19.5367V15.5867C2 15.1267 2.3725 14.7533 2.83333 14.7533C3.29417 14.7533 3.66667 15.1267 3.66667 15.5867V19.5367C3.66667 19.9758 4.02417 20.3333 4.4625 20.3333H8.4125C8.87333 20.3333 9.24583 20.7067 9.24583 21.1667C9.24583 21.6267 8.87333 22 8.4125 22Z"
                  fill="currentColor"
                />
                <path
                  d="M9.89833 11.2992H5.75C5.28917 11.2992 4.91667 10.9258 4.91667 10.4658V5.75C4.91667 5.29 5.28917 4.91667 5.75 4.91667H9.89833C10.3592 4.91667 10.7317 5.29 10.7317 5.75V10.4658C10.7317 10.9258 10.3583 11.2992 9.89833 11.2992ZM6.58333 9.6325H9.065V6.58333H6.58333V9.6325Z"
                  fill="currentColor"
                />
                <path
                  d="M18.25 19.0833H14.2917C13.8308 19.0833 13.4583 18.71 13.4583 18.25V15.5983C13.4583 15.1383 13.8308 14.765 14.2917 14.765C14.7525 14.765 15.125 15.1383 15.125 15.5983V17.4167H17.4167V14.9167H16.4317C15.9708 14.9167 15.5983 14.5433 15.5983 14.0833C15.5983 13.6233 15.9708 13.25 16.4317 13.25H18.25C18.7108 13.25 19.0833 13.6233 19.0833 14.0833V18.25C19.0833 18.71 18.7108 19.0833 18.25 19.0833Z"
                  fill="currentColor"
                />
                <path
                  d="M18.25 9.9925H14.8408C14.38 9.9925 14.0075 9.61916 14.0075 9.15916V5.75C14.0075 5.29 14.38 4.91667 14.8408 4.91667H18.25C18.7108 4.91667 19.0833 5.29 19.0833 5.75V9.15916C19.0833 9.61916 18.7108 9.9925 18.25 9.9925ZM15.6742 8.32583H17.4167V6.58333H15.6742V8.32583Z"
                  fill="currentColor"
                />
                <path
                  d="M12.3983 13.78H5.75C5.28917 13.78 4.91667 13.4067 4.91667 12.9467C4.91667 12.4867 5.28917 12.1133 5.75 12.1133H11.565V6.5075C11.565 6.0475 11.9375 5.67417 12.3983 5.67417C12.8592 5.67417 13.2317 6.0475 13.2317 6.5075V12.9467C13.2317 13.4067 12.8583 13.78 12.3983 13.78Z"
                  fill="currentColor"
                />
                <path
                  d="M14.7083 13.5717C14.2475 13.5717 13.875 13.1983 13.875 12.7383V11.6025C13.875 11.1425 14.2475 10.7692 14.7083 10.7692H18.4583C18.9192 10.7692 19.2917 11.1425 19.2917 11.6025C19.2917 12.0625 18.9192 12.4358 18.4583 12.4358H15.5417V12.7383C15.5417 13.1983 15.1692 13.5717 14.7083 13.5717Z"
                  fill="currentColor"
                />
                <path
                  d="M12.0183 18.0008C11.5575 18.0008 11.185 17.6275 11.185 17.1675V15.2742C11.185 14.8142 11.5575 14.4408 12.0183 14.4408C12.4792 14.4408 12.8517 14.8142 12.8517 15.2742V17.1675C12.8517 17.6275 12.4792 18.0008 12.0183 18.0008Z"
                  fill="currentColor"
                />
                <path
                  d="M9.70833 19.0833H5.75C5.28917 19.0833 4.91667 18.71 4.91667 18.25V15.22C4.91667 14.76 5.28917 14.3867 5.75 14.3867H9.70833C10.1692 14.3867 10.5417 14.76 10.5417 15.22V18.25C10.5417 18.71 10.1692 19.0833 9.70833 19.0833ZM6.58333 17.4167H8.875V16.0533H6.58333V17.4167Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="action-button center-display"
      >
        <button>
          Next 
        </button>
      </div>
      <div
        class="action-button center-display"
      >
        <a
          href="/"
        >
          Cancel
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Settings and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="settings"
    >
      <div
        class="header-container settings-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="list"
      >
        <div
          class="setting"
        >
          <div
            class="icon"
          >
            <i
              class="icon-at"
            />
          </div>
          <div
            class="name"
          >
            Email
            <div
              class="sub"
            >
              (not logged in)
            </div>
          </div>
          <div
            class="action"
          >
            <i
              class="icon-lock"
            />
          </div>
        </div>
        <div
          class="setting"
        >
          <div
            class="icon"
          >
            <i
              class="icon-world"
            />
          </div>
          <div
            class="name"
          >
            Language
            <div
              class="sub"
            >
              Default (OS)
            </div>
          </div>
          <div
            class="action"
          >
            <select
              disabled=""
              name="language"
            >
              <option
                value="DEFAULT"
              >
                Default (OS)
              </option>
              <option
                value="en-US"
              >
                English
              </option>
              <option
                value="es-SV"
              >
                Spanish
              </option>
            </select>
          </div>
        </div>
        <div
          class="setting"
        >
          <div
            class="icon"
          >
            <i
              class="icon-opacity"
            />
          </div>
          <div
            class="name"
          >
            Color Theme
            <div
              class="sub"
            >
              Default (OS)
            </div>
          </div>
          <div
            class="action"
          >
            <select
              name="colorTheme"
            >
              <option
                value="DEFAULT"
              >
                Default (OS)
              </option>
              <option
                value="dark"
              >
                Dark mode
              </option>
              <option
                value="light"
              >
                Light mode
              </option>
            </select>
          </div>
        </div>
        <div
          class="setting"
        >
          <a
            href="/login"
          >
            <i
              class="icon-login"
            />
            <span
              class="name"
            >
              Login
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root appRoutes renders Transactions and matches snapshot 1`] = `
<DocumentFragment>
  <div
    data-language="DEFAULT"
    id="main-container"
  >
    <div
      class="transaction-list"
    >
      <div
        class="header-container transactions-header"
      >
        <div
          class="header"
        >
          <div
            class="balance"
          >
            <div
              class="title"
            >
              Current Balance
            </div>
            <div
              class="value"
            >
              <div
                class="primary"
              >
                <span
                  class="sat-format"
                  title="Bitcoin Satoshis"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M18.606 2.86741L17.0688 2L15.5524 4.56685L17.0897 5.43426L18.606 2.86741ZM8.82022 19.4331L7.28298 18.5657L5.76664 21.1326L7.30388 22L8.82022 19.4331ZM20.4706 10.347L19.5831 11.8494L8.62228 5.66464L9.50981 4.16223L20.4706 10.347ZM17.2389 15.8174L18.1265 14.315L7.16567 8.13017L6.27814 9.63257L17.2389 15.8174ZM15.8483 18.1709L14.9608 19.6733L4 13.4885L4.88753 11.9861L15.8483 18.1709Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  0
                </span>
              </div>
              <div
                class="secondary"
              >
                $0.00
              </div>
            </div>
          </div>
          <div
            class="links"
          >
            <a
              href="/"
            >
              <i
                class="icon-home"
              />
              <span
                class="name"
              >
                Home
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <a
              href="/login"
            >
              <i
                class="icon-login"
              />
              <span
                class="name"
              >
                Login
              </span>
            </a>
            <div
              class="separator"
            >
              |
            </div>
            <div
              class="menu-icon"
            >
              <i
                class="icon-menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="page-title"
      >
        Transactions with user0
      </div>
      <div
        class="load-more"
      >
        <svg
          class="spinner"
          viewBox="0 0 50 50"
        >
          <circle
            class="path"
            cx="25"
            cy="25"
            fill="none"
            r="20"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root authRoutes renders Login and matches snapshot 1`] = `
<DocumentFragment>
  <div
    id="main-container"
  >
    <div
      class="login-form auth-form"
    >
      <form
        method="POST"
      >
        <input
          name="csrf_token"
          type="hidden"
          value=""
        />
        <div
          class="input-container"
        >
          <div
            class=""
          >
            Email
          </div>
          <input
            autocomplete="email"
            name="identifier"
            required=""
            type="email"
            value=""
          />
        </div>
        <div
          class="input-container"
        >
          <div
            class=""
          >
            Password
          </div>
          <input
            autocomplete="current-password"
            name="password"
            required=""
            type="password"
          />
        </div>
        <div
          class="button-container"
        >
          <button
            class="button"
            name="method"
            value="password"
          >
            Login
          </button>
          <a
            href="/"
          >
            Cancel
          </a>
        </div>
      </form>
    </div>
    <div
      class="form-links"
    >
      <a
        href="/register"
      >
        <i
          class="icon-login"
        />
        Create new account
      </a>
      <div
        class="separator"
      >
        |
      </div>
      <a
        href="/recovery"
      >
        <i
          class="icon-key"
        />
        Recover your account
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root authRoutes renders Recorver and matches snapshot 1`] = `
<DocumentFragment>
  <div
    id="main-container"
  >
    <div
      class="recovery-form auth-form"
    >
      <form
        method="POST"
      >
        <input
          name="csrf_token"
          type="hidden"
          value=""
        />
        <div
          class="input-container"
        >
          <div
            class=""
          >
            Email
          </div>
          <input
            autocomplete="email"
            name="email"
            required=""
            type="email"
          />
        </div>
        <div
          class="button-container"
        >
          <button
            class="button"
            name="method"
            value="link"
          >
            Recover Account
          </button>
          <a
            href="/"
          >
            Cancel
          </a>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root authRoutes renders Register and matches snapshot 1`] = `
<DocumentFragment>
  <div
    id="main-container"
  >
    <div
      class="register-form auth-form"
    >
      <form
        method="POST"
      >
        <input
          name="csrf_token"
          type="hidden"
          value=""
        />
        <div
          class="input-container"
        >
          <div
            class=""
          >
            Email
          </div>
          <input
            autocomplete="email"
            name="traits.email"
            required=""
            type="email"
            value=""
          />
        </div>
        <div
          class="input-container"
        >
          <div
            class=""
          >
            Password
          </div>
          <input
            autocomplete="current-password"
            name="password"
            required=""
            type="password"
          />
        </div>
        <div
          class="button-container"
        >
          <button
            class="button"
            name="method"
            value="password"
          >
            Create Account
          </button>
          <a
            href="/"
          >
            Cancel
          </a>
        </div>
      </form>
    </div>
    <div
      class="form-links"
    >
      <a
        href="/login"
      >
        <i
          class="icon-login"
        />
        Login
      </a>
    </div>
  </div>
</DocumentFragment>
`;
